--- a/apps/login_reg/templates/login_reg/index.html
+++ b/apps/login_reg/templates/login_reg/index.html
@@ -49,6 +49,12 @@
                     <label for="email">Email</label>
                     <input class="form-control" type="email" name="email">
                 </div>
+
+                <div class="form-group">
+                    <label for="dob">Date of Birth</label>
+                    <input class="form-control" type="date" name="dob" min="1920-01-01">
+                </div>
+
                 
                 <div class="form-group">
                     <label for="password">Password</label>
